// Safe Travels — Database Model (implementado)
// Última atualização: 2026-06-07
// Ferramenta de visualização: https://dbdiagram.io
//
// Reflete o schema real da branch `trips`.
// Funcionalidades planejadas (follows, privacy_settings) marcadas como nota.

Table users {
  user_id varchar [pk, default: `gen_random_uuid()`]
  username varchar(80) [not null, unique]
  name varchar(150) [not null]
  email varchar(255) [not null, unique]
  password_hash text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    username
    email
  }

  note: "Campos planejados não implementados: phone, profile_image, privacy_settings (location_visibility)"
}

Table groups {
  group_id varchar [pk, default: `gen_random_uuid()`]
  owner_id varchar [not null, ref: > users.user_id]
  name varchar(150) [not null]
  description varchar(500)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table group_members {
  group_id varchar [not null, ref: > groups.group_id]
  user_id varchar [not null, ref: > users.user_id]
  joined_at timestamptz [not null, default: `now()`]

  indexes {
    (group_id, user_id) [pk]
    user_id
  }
}

Table trips {
  trip_id varchar [pk, default: `gen_random_uuid()`]
  name varchar(150) [not null]
  description text
  owner_id varchar [not null, ref: > users.user_id]
  group_id varchar [ref: > groups.group_id, note: "NULL = viagem individual; NOT NULL = viagem de grupo"]
  started_at timestamptz [not null, default: `now()`]
  ended_at timestamptz [note: "NULL = trip ativa"]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    owner_id
    group_id
    ended_at
  }
}

Table user_trips {
  trip_id varchar [not null, ref: > trips.trip_id]
  user_id varchar [not null, ref: > users.user_id]
  joined_at timestamptz [not null, default: `now()`]

  indexes {
    (trip_id, user_id) [pk]
    user_id
  }
}

// Localização é sempre ancorada no usuário.
// Vínculos com grupos e viagens são feitos via tabelas de junção,
// permitindo que um evento seja compartilhado com múltiplos contextos
// sem duplicação de dados.
//
// Regra: location_event_groups e location_event_trips só recebem
// grupos/viagens com trip ativa no momento do registro.
Table location_events {
  location_event_id bigserial [pk]
  user_id varchar [not null, ref: > users.user_id]
  latitude decimal(10,7) [not null]
  longitude decimal(10,7) [not null]
  accuracy_meters int
  captured_at timestamptz [not null, note: "Horário do dispositivo"]
  created_at timestamptz [not null, default: `now()`, note: "Horário de recepção pelo servidor"]

  indexes {
    (user_id, captured_at)
  }
}

Table location_event_groups {
  location_event_id bigint [not null, ref: > location_events.location_event_id]
  group_id varchar [not null, ref: > groups.group_id]

  indexes {
    (location_event_id, group_id) [pk]
    (group_id, location_event_id)
  }
}

Table location_event_trips {
  location_event_id bigint [not null, ref: > location_events.location_event_id]
  trip_id varchar [not null, ref: > trips.trip_id]

  indexes {
    (location_event_id, trip_id) [pk]
    (trip_id, location_event_id)
  }
}

Table schema_migrations {
  name varchar [pk, note: "Nome do arquivo SQL ex: 001_add_trips.sql"]
  applied_at timestamptz [not null, default: `now()`]
}

// Tabelas planejadas, não implementadas:
// - follows (follower_id, followed_id, created_at)
